# bcdc

./: README.md
bcdc_v.1.0/: bcdc3-example.ipynb
bcdc_v.1.0/bcdc/: bcdc3.py  bgm_c_object.pickle  pyproject.toml
bcdc_v.1.0/bcdc/bcdc3.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bcgcd_v.0/: bcgcd3-example.ipynb  testdat.txt
bcgcd_v.0/bcgcd/: bcgcd3.py  bgm_a_object.pickle  bgm_m_object.pickle  pyproject.toml
bcgcd_v.0/bcgcd/bcgcd3.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
